@@ -99,7 +99,7 @@ void AVRISP_Task(void)
 	if (USB_DeviceState != DEVICE_STATE_Configured)
 	  return;
 
-	Endpoint_SelectEndpoint(AVRISP_DATA_EPNUM);
+	Endpoint_SelectEndpoint(AVRISP_DATA_OUT_EPNUM);
 	
 	/* Check to see if a V2 Protocol command has been received */
 	if (Endpoint_IsOUTReceived())
@@ -178,18 +178,24 @@ void SetupHardware(void)
 /** Event handler for the library USB Configuration Changed event. */
 void EVENT_USB_Device_ConfigurationChanged(void)
 {
-	bool EndpointConfigSuccess;
+	bool EndpointConfigSuccess = true;
 
 	/* Configure the device endpoints according to the selected mode */
 	if (CurrentFirmwareMode == MODE_USART_BRIDGE)
 	{
-		EndpointConfigSuccess = CDC_Device_ConfigureEndpoints(&VirtualSerial_CDC_Interface);
+		EndpointConfigSuccess &= CDC_Device_ConfigureEndpoints(&VirtualSerial_CDC_Interface);
 	}
 	else
 	{
-		EndpointConfigSuccess = Endpoint_ConfigureEndpoint(AVRISP_DATA_EPNUM, EP_TYPE_BULK,
-										                   ENDPOINT_DIR_OUT, AVRISP_DATA_EPSIZE,
-										                   ENDPOINT_BANK_SINGLE);
+		EndpointConfigSuccess &= Endpoint_ConfigureEndpoint(AVRISP_DATA_OUT_EPNUM, EP_TYPE_BULK,
+										                    ENDPOINT_DIR_OUT, AVRISP_DATA_EPSIZE,
+										                    ENDPOINT_BANK_SINGLE);
+
+		#if defined(WIN_LIBUSB_COMPAT)
+		EndpointConfigSuccess &= Endpoint_ConfigureEndpoint(AVRISP_DATA_IN_EPNUM, EP_TYPE_BULK,
+		                                                    ENDPOINT_DIR_IN, AVRISP_DATA_EPSIZE,
+		                                                    ENDPOINT_BANK_SINGLE);
+		#endif
 	}
 
 	if (EndpointConfigSuccess)
